fix: only show PWA popup on mobile

--- a/src/css/scss/layout/_fade.scss
+++ b/src/css/scss/layout/_fade.scss
@@ -18,7 +18,7 @@
         z-index: 10;
         opacity: 1;
         pointer-events: all;
-        @include desktop {
+        @include media(500px) {
             display: none;
         }
     }
